changed lombok annotations. Added RestClientResponseException handler method